update package name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: mediquo_flutter_package
-description: "A new Flutter package project."
+name: mediquo-flutter-sdk
+description: "MediQuo Flutter SDK"
 version: 0.0.1
 homepage:
 
