--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,6 +8,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  connectivity_plus: ^6.0.3
   flutter:
     sdk: flutter
   flutter_inappwebview: ^6.0.0
